[package]
name = "rs_lisp"
version = "0.1.0"
edition = "2021"
authors = ["Danyiel Colin <danyiel5978@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.2.7", features=["derive"] }
rustyline = "11.0.0"
pest = "2.6.0"
pest_derive = "2.6.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
colored = "2.0.0"
anyhow = "1.0.71"
thiserror = "1.0.40"
